--- a/version-catalog/core.toml
+++ b/version-catalog/core.toml
@@ -25,3 +25,5 @@ navigation-ui  = { module = "androidx.navigation:navigation-ui-ktx", version.ref
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlin-kapt = {id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin"}
