--- a/version-catalog/core.toml
+++ b/version-catalog/core.toml
@@ -10,6 +10,9 @@ appcompat = "1.6.1"
 # Navigation
 navigation = "2.7.7"
 
+# Serialization
+kotlinxSerialization = "1.6.2"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -20,6 +23,8 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 # Navigation
 navigation-fragment  = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation"}
 navigation-ui  = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation"}
+# Serialization
+kotlinx-serializarion = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization"}
 
 
 [plugins]
